scribble-pad_style.css
* {
  box-sizing: border-box;
}
body {
  background-color: rgba(242,235,220,0.5);
  margin: 0;
}
h1 {
  font-family: "Lucida Console";
  text-align: center;
  margin-top: 50px;
  margin-bottom: 50px;
}  
p {
  font-family: Arial;
  text-align: left;
  margin-top: 50px;
  margin-bottom: 50px;
  margin-right: 100px;
  margin-left: 100px;
}
.sidenav {
  height: 100%;
  width: 200px;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgba(196,50,39,0.8);
  overflow-x: hidden;
}
.sidenav a {
  font-family: Arial;
  color: white;
  padding: 10px;
  text-decoration: none;
  display: block;
}
.sidenav a:hover {
  background-color: #ddd;
  color: black;
}
.content {
  margin-left: 150px;
  padding-left: 20px;
}
ul {
  margin-left: 200px;
  padding-left: 20px;
}
zero-md {
  margin-left: 200px;
  padding-left: 20px;
}

